@@ -1,3 +1,12 @@
+2001-12-20  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (_createlist, _set, _who)
+	Mj::List::get_start may return two values if an error occurs.
+
+	* lib/Mj/List.pm:  (count_subs, moderators)
+	Mj::List::get_start may return two values if an error occurs.
+	Thanks to Paul Hancock.
+
 2001-12-19  Michael Yount <csf@moscow.com>
 
 	* bin/mj_queueserv, mj_shutdown:  Allow a delay before
@@ -143,7 +152,7 @@
 	when determining delay lengths.
 
 	* lib/Majordomo.pm:  (new)  Test for case-insensitive
-        equivalence in domain names.
+	equivalence in domain names.
 
 	* lib/Mj/Access.pm:  (_d_post)  Add limit_lower to the
 	list of consult variables.
@@ -157,7 +166,7 @@
 	* lib/Mj/Config.pm:  (parse_digests)  Parse time spans
 	in the minage, separate, and maxage fields at run time.
 	(parse_limits)  Add support for a lower limit.
-        (compile_pattern)  The ALL pattern will now match anything.
+	(compile_pattern)  The ALL pattern will now match anything.
 
 	* lib/Mj/Digest.pm:  (decide)  Parse time spans at
 	run time.  Clarify log messages.
@@ -183,7 +192,7 @@
 	* lib/Mj/CommandProps.pm: Add posts_this_day/week/month variables.
 
 	* lib/Mj/List.pm (post_gen_stats): Generate counts frojm the
-        beginning of the current day/week/month.
+	beginning of the current day/week/month.
 
 2001-11-19  Michael Yount <csf@moscow.com>
 
